# terminal_tetris

./: LICENSE  pyproject.toml
terminal-tetris/: __main__.py  game.py  misc.py  scene.py
terminal_tetris/: __main__.py  misc.py  scene.py  tetris.py
